--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+        <activity   android:name=".Game"
+                    android:parentActivityName=".ChooseCategory">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter></activity>
     </application>
 
 </manifest>
