Added Items - Items can be sent through Activities - Buttons go RED or GREEN when you answered it wrong or correct respectively - Answering a correct answer brings you to the Category Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             </intent-filter>
         </activity>
         <activity   android:name=".Game"
+                    android:label="Game"
                     android:parentActivityName=".ChooseCategory">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
