--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,12 +32,18 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity   android:name=".Game"
-                    android:label="Game"
-                    android:parentActivityName=".ChooseCategory">
+        <activity
+            android:name=".Game"
+            android:label="Game"
+            android:parentActivityName=".ChooseCategory">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-            </intent-filter></activity>
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".InsertQuestion"
+            android:label="@string/title_activity_insert_question"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
