--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,9 +44,7 @@
         </activity>
         <activity
             android:name=".Game"
-            android:label="Game"
-            android:parentActivityName=".ChooseCategory"
-            android:theme="@style/FTS_Yellow.NoActionBar">
+            android:label="Game">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
