--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/FTS_Yellow">
+        android:theme="@style/AppTheme">
+
         <activity
                 android:name=".SplashActivity"
                 android:theme="@style/SplashTheme">
@@ -21,11 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ChooseCategory"
             android:label="Choose Category"
@@ -34,6 +37,7 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".Settings"
             android:label="@string/title_activity_settings"
@@ -42,6 +46,7 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".Game"
             android:label="Game">
@@ -49,10 +54,7 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".InsertQuestion"
-            android:label="@string/title_activity_insert_question"
-            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".GameOver"
             android:label="Game Over!"
@@ -61,6 +63,7 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
