--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,10 @@ android {
         applicationId "com.teamenigma.factthisshoot"
         minSdkVersion 19
         targetSdkVersion 25
-        versionName '1.3.1'
+        versionName '1.4.0'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        versionCode 5
+        versionCode 6
         multiDexEnabled true
     }
     buildTypes {
@@ -33,7 +33,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
+    //compile 'com.google.firebase:firebase-auth:10.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.google.firebase:firebase-ads:11.4.2'
 }
