--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,11 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.firebase:firebase-ads:11.4.2'
+    compile 'com.google.android.gms:play-services-ads:11.4.2'
+    compile 'com.google.android.gms:play-services-auth:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.0.4'
     testCompile 'junit:junit:4.12'
+    compile project(':BaseGameUtils')
 }
-
 
 apply plugin: 'com.google.gms.google-services'
