--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.teamenigma.factthisshoot"
         minSdkVersion 19
@@ -38,7 +37,9 @@ dependencies {
     compile 'com.google.firebase:firebase-ads:11.4.2'
     compile 'com.google.android.gms:play-services-ads:11.4.2'
     compile 'com.google.android.gms:play-services-auth:11.4.2'
-    compile 'com.google.firebase:firebase-messaging:11.0.4'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
 }
 
